# aj_okcoders_pro_python

./: .gitignore  hn_posts.db  movie_data.db  pyproject.toml
Capstone_Project/: .env.example  .gitignore  README.md  capstone_hn_posts.db  capstone_hn_posts.db.example  capstone_project.py
Class_One_Excercises/: Chapter_2_Opposite_Day_ATBS.py  Chapter_2_Practice.py  Class_One_Challenge.py
Class_Three_Excercises/: Ex_1_Text_Stats.py  passage.txt
Class_Three_Excercises/Ex_1_Helpers/: helpers.py
Class_Two_Excercises/: Class_Two_Challenge.py  Excercise_1_Functions.py  Excercise_2_Shopping_Cart.py  Todos.json
M2_Class_One_Excercises/: Ex1_Headline_Scraper.py  Price_Monitoring.py  price_monitoring_helpers.py
M2_Class_Three_Excercises/: data_processor.py
M2_Class_Two_Excercises/: data_pipeline.py
